--- a/public/css/app.css
+++ b/public/css/app.css
@@ -759,6 +759,12 @@ select {
 .w-6 {
   width: 1.5rem;
 }
+.w-10 {
+  width: 2.5rem;
+}
+.w-80 {
+  width: 20rem;
+}
 .max-w-6xl {
   max-width: 72rem;
 }
